--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-[#EDEDED] font-sans">
+<html lang="en" class="bg-black dark font-sans">
   <head>
     <title>{{ title }}</title>
 
