--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -1,11 +1,16 @@
-<h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-base leading-none text-black/70 dark:text-white/80 gsap-header">
-  © Selected Works by Jin <span class="hidden md:inline">Su Park</span>
+<h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-base leading-none text-black dark:text-white gsap-header">
+  <a href="/">
+    © Selected Works by Jin <span class="hidden md:inline">Su Park</span>
+  </a>
 </h1>
 
 <div class="fixed top-0 right-0 mt-5 mr-5 sm:mt-8 sm:mr-8 z-50 gsap-header">
   <ul class="flex items-center gap-5">
     <li class="flex items-center">
       <a href="/about" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">About</a>
+    </li>
+    <li class="hidden lg:flex items-center">
+      <a href="/" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Works</a>
     </li>
     <li class="hidden lg:flex items-center">
       <a href="https://github.com/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Github</a>
