--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -28,50 +28,45 @@ layout: layouts/base.njk
 
 
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
-      <div class="flex flex-col lg:flex-row px-5 md:px-8 py-7 lg:gap-10 xl:gap-36">
+      <div class="px-5 md:px-8 py-8 pb-[112px]">
         <div>
-          <h3 class="mb-24 lg:mb-36 w-full max-w-[576px] 2xl:max-w-[640px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-medium leading-snug 2xl:leading-[1.40]">
-            <span class="text-black dark:text-white">Through All Seasons (2023)</span> – is a first-of-its-kind live and on-demand content platform with a focus on high-quality original series, live events, and experiences for business audiences. We worked side-by-side with our partners at Salesforce, fielding a cross-discipline team to envision, design, and launch.
-          </h3>
-        </div>
+          <h1 class="text-2xl sm:text-3xl text-neutral-700 dark:text-neutral-200 mb-4">
+            Through All Seasons <br>
+            <span class="text-neutral-300 dark:text-neutral-600">(2023)</span>
+          </h1>
+          <p class="mb-12 w-full max-w-[540px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+            A first-of-its-kind live and on-demand content platform with a focus on high-quality original series, live events, and experiences for business audiences. We worked side-by-side with our partners at Salesforce, fielding a cross-discipline team to envision, design, and launch.
+          </p>
 
-        <div class="grid grid-cols-2 xl:pr-10 lg:gap-20">
-          <div>
-            <h4 class="text-sm font-medium text-black/20 dark:text-white/20 mb-4">Applied Disciplines</h4>
-            <ul class="">
-              <li class="text-base font-medium text-black/50 dark:text-white/50">
-                Branding
-              </li>
-              <li class="text-base font-medium text-black/50 dark:text-white/50">
-                Art Direction
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h4 class="text-sm font-medium text-black/20 dark:text-white/20 mb-4">Technologies Used</h4>
-            <ul class="">
-              <li class="text-base font-medium text-black/50 dark:text-white/50">
-                Illustrator
-              </li>
-              <li class="text-base font-medium text-black/50 dark:text-white/50">
-                Photoshop
-              </li>
-              <li class="text-base font-medium text-black/50 dark:text-white/50">
-                Figma
-              </li>
-              <li class="text-base font-medium text-black/50 dark:text-white/50">
-                HTML
-              </li>
-            </ul>
-          </div>
+          <div class="w-9 h-[2px] mb-12 bg-neutral-700 dark:bg-neutral-200"></div>
+
+          <table class="dark:text-neutral-400 text-xs">
+            <tr>
+              <td class="py-1 pr-8">Client</td>
+              <td class="py-1 dark:text-neutral-600">Fergus</td>
+            </tr>
+            <tr>
+              <td class="py-1 pr-8">Year</td>
+              <td class="py-1 dark:text-neutral-600">2022</td>
+            </tr>
+            <tr>
+              <td class="py-1 pr-8">Disciplines</td>
+              <td class="py-1 dark:text-neutral-600">Digital Strategy, Digital Design, Web design, UX/UI</td>
+            </tr>
+            <tr>
+              <td class="py-1 pr-8">Technologies</td>
+              <td class="py-1 dark:text-neutral-600">HTML, CSS, Figma, Eleventy, Tailwind, AlpineJS</td>
+            </tr>
+          </table>
         </div>
-        
       </div>
+
+
       <div class="grid grid-cols-2 gap-1">
-        <div>
+        <div class="col-span-2 sm:col-span-1">
           <img src="https://cdn.dribbble.com/userupload/4797787/file/original-dd855009ad53809455f97f6558cc6de0.jpg?compress=1&resize=1504x838" class="w-full aspect-[4/3] object-cover">
         </div>
-        <div>
+        <div class="col-span-2 sm:col-span-1">
           <img src="https://cdn.dribbble.com/userupload/4606557/file/original-ad83b97ed87fa135e039e4680755da2d.jpg?compress=1&resize=1504x1003" class="w-full aspect-[4/3] object-cover">
         </div>
 
