--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -42,20 +42,20 @@ layout: layouts/base.njk
 
           <table class="dark:text-neutral-400 text-xs">
             <tr>
-              <td class="py-1 pr-8">Client</td>
-              <td class="py-1 dark:text-neutral-600">Fergus</td>
+              <td class="align-top py-1 pr-8">Client</td>
+              <td class="align-top py-1 dark:text-neutral-600">Fergus</td>
             </tr>
             <tr>
-              <td class="py-1 pr-8">Year</td>
-              <td class="py-1 dark:text-neutral-600">2022</td>
+              <td class="align-top py-1 pr-8">Year</td>
+              <td class="align-top py-1 dark:text-neutral-600">2022</td>
             </tr>
             <tr>
-              <td class="py-1 pr-8">Disciplines</td>
-              <td class="py-1 dark:text-neutral-600">Digital Strategy, Digital Design, Web design, UX/UI</td>
+              <td class="align-top py-1 pr-8">Disciplines</td>
+              <td class="align-top py-1 dark:text-neutral-600">Digital Strategy, Digital Design, Web design</td>
             </tr>
             <tr>
-              <td class="py-1 pr-8">Technologies</td>
-              <td class="py-1 dark:text-neutral-600">HTML, CSS, Figma, Eleventy, Tailwind, AlpineJS</td>
+              <td class="align-top py-1 pr-8">Technologies</td>
+              <td class="align-top py-1 dark:text-neutral-600">HTML, CSS, Figma, Eleventy, Tailwind, AlpineJS</td>
             </tr>
           </table>
         </div>
