--- a/index.njk
+++ b/index.njk
@@ -6,7 +6,40 @@ layout: layouts/base.njk
 
 
 <main data-barba="container" data-barba-namespace="home" class="gsap-container xh-screen xoverflow-hidden">
-  
+  <h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-base leading-none text-black dark:text-white gsap-header">
+    <a href="/">
+      © Selected <span class="hidden md:inline">Works </span>by Jin <span class="hidden md:inline">Su Park</span>
+    </a>
+  </h1>
+
+  <div class="fixed top-0 right-0 mt-5 mr-5 sm:mt-8 sm:mr-8 z-50 gsap-header">
+    <ul class="flex items-center gap-5">
+      <li class="flex items-center">
+        <a href="/about" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">About</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="/" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Works</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="https://github.com/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Github</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="https://read.cv/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">CV</a>
+      </li>
+      
+      {# <li class="flex lg:hidden items-center">
+        <a href="#" class="flex items-center font-medium text-sm text-black/80 hover:text-black/80 duration-200">
+          Published
+          <svg class="fill-current w-3 h-3 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 240L160 384 0 240l0-48 320 0 0 48z"/></svg>
+        </a>
+      </li> #}
+      <li class="flex items-center lg:ml-1">
+        <button @click="toggleDarkMode()" class="w-4 h-4 rounded-full overflow-hidden border border-black dark:border-white">
+          <div class="w-[8px] h-4 bg-black dark:bg-white"></div>
+        </button>
+      </li>
+    </ul>
+  </div>
   
   {# Category Selector #}
   <div class="fixed z-[60] bottom-0 mb-4 md:mb-8 px-4 w-full flex items-center justify-center pointer-events-none gsap-footer">
