--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -4,10 +4,44 @@ layout: layouts/base.njk
 ---
 
 <main data-barba="container" data-barba-namespace="work" class="gsap-container xh-screen xoverflow-hidden">
+  <h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-base leading-none text-black dark:text-white gsap-header">
+    <a href="/">
+      © Selected <span class="hidden md:inline">Works </span>by Jin <span class="hidden md:inline">Su Park</span>
+    </a>
+  </h1>
+
+  <div class="fixed top-0 right-0 mt-5 mr-5 sm:mt-8 sm:mr-8 z-50 gsap-header">
+    <ul class="flex items-center gap-5">
+      <li class="flex items-center">
+        <a href="/about" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">About</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="/" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Works</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="https://github.com/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Github</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="https://read.cv/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">CV</a>
+      </li>
+      
+      {# <li class="flex lg:hidden items-center">
+        <a href="#" class="flex items-center font-medium text-sm text-black/80 hover:text-black/80 duration-200">
+          Published
+          <svg class="fill-current w-3 h-3 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 240L160 384 0 240l0-48 320 0 0 48z"/></svg>
+        </a>
+      </li> #}
+      <li class="flex items-center lg:ml-1">
+        <button @click="toggleDarkMode()" class="w-4 h-4 rounded-full overflow-hidden border border-black dark:border-white">
+          <div class="w-[8px] h-4 bg-black dark:bg-white"></div>
+        </button>
+      </li>
+    </ul>
+  </div>
 
   <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 w-full md:w-auto flex items-center justify-center gsap-footer">
     <a href="/" class="relative flex items-center justify-center flex-none w-14 h-14 text-white">
-      <div class="absolute top-0 left-0 flex-none w-14 h-14 rounded-full bg-[#535353] duration-200 hover:scale-110">
+      <div class="absolute top-0 left-0 flex-none w-14 h-14 rounded-full bg-neutral-800 dark:bg-neutral-700 duration-200 hover:scale-110">
 
       </div>
       <svg class="relative z-10 pointer-events-none" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
@@ -28,34 +62,52 @@ layout: layouts/base.njk
 
 
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
-      <div class="px-5 md:px-8 py-8 pb-[112px]">
+      <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
-          <h1 class="text-2xl sm:text-3xl text-neutral-700 dark:text-neutral-200 mb-4">
-            Through All Seasons <br>
-            <span class="text-neutral-300 dark:text-neutral-600">(2023)</span>
+          <h1 class="text-2xl sm:text-5xl 2xl:text-5xl font-regular text-neutral-300 dark:text-neutral-700 mb-14">
+            Through All Seasons 
+            {# <br>
+            <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
           </h1>
-          <p class="mb-12 w-full max-w-[540px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
-            A first-of-its-kind live and on-demand content platform with a focus on high-quality original series, live events, and experiences for business audiences. We worked side-by-side with our partners at Salesforce, fielding a cross-discipline team to envision, design, and launch.
-          </p>
+          {# <div class="w-9 h-[2px] mb-12 bg-neutral-700 dark:bg-neutral-200"></div> #}
+        </div>
+        <div>
+          <div x-data="{ open: false }">
+            <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at ligula pharetra, viverra nisi eget, venenatis metus. Curabitur ante odio, pellentesque posuere ipsum volutpat, consectetur dignissim lacus. Vestibulum ut faucibus risus. Aliquam dignissim ligula eu ornare vulputate. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+            </p>
 
-          <div class="w-9 h-[2px] mb-12 bg-neutral-700 dark:bg-neutral-200"></div>
+            <a x-show="!open" @click="open = true" class="font-medium text-base 2xl:text-lg dark:text-neutral-200 dark:hover:text-neutral-300 cursor-pointer">Read more</a>
 
-          <table class="dark:text-neutral-400 text-xs">
+            <div x-show="open" x-transition.opacity>
+              <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+                Nulla lacinia, ex in hendrerit vehicula, elit est varius erat, vitae rutrum quam nulla eget nibh. Curabitur sollicitudin sodales leo id sollicitudin. Maecenas nec lorem at massa venenatis vestibulum. In hac habitasse platea dictumst. Proin non tortor non eros aliquam pretium quis eu metus.
+              </p>
+
+              <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+                I'm always curious to hear from new people about new thoughts, ideas, problems, projects or collaborations. Proin non tortor non eros aliquam pretium quis eu metus.
+              </p>
+            </div>
+          </div>
+
+          
+
+          <table class="w-full mt-[160px] dark:text-neutral-400 text-xs xl:text-sm">
             <tr>
-              <td class="align-top py-1 pr-8">Client</td>
-              <td class="align-top py-1 dark:text-neutral-600">Fergus</td>
+              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Client</td>
+              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">Fergus</td>
             </tr>
             <tr>
-              <td class="align-top py-1 pr-8">Year</td>
-              <td class="align-top py-1 dark:text-neutral-600">2022</td>
+              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Year</td>
+              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">2022</td>
             </tr>
             <tr>
-              <td class="align-top py-1 pr-8">Disciplines</td>
-              <td class="align-top py-1 dark:text-neutral-600">Digital Strategy, Digital Design, Web design</td>
+              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Discipline</td>
+              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">Digital Strategy, Digital Design, Web design</td>
             </tr>
             <tr>
-              <td class="align-top py-1 pr-8">Technologies</td>
-              <td class="align-top py-1 dark:text-neutral-600">HTML, CSS, Figma, Eleventy, Tailwind, AlpineJS</td>
+              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Technology</td>
+              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">HTML, CSS, Figma, Eleventy, Tailwind, AlpineJS</td>
             </tr>
           </table>
         </div>
