--- a/index.njk
+++ b/index.njk
@@ -8,7 +8,7 @@ layout: layouts/base.njk
 <main data-barba="container" data-barba-namespace="home" class="gsap-container xh-screen xoverflow-hidden">
   <h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-base leading-none text-black dark:text-white gsap-header">
     <a href="/">
-      © Selected <span class="hidden md:inline">Works </span>by Jin <span class="hidden md:inline">Su Park</span>
+      © Selected Works 08 &#8212; 23
     </a>
   </h1>
 
