--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -5,8 +5,10 @@ layout: layouts/base.njk
 
 <main data-barba="container" data-barba-namespace="work" class="gsap-container xh-screen xoverflow-hidden">
   <h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-base leading-none text-black dark:text-white gsap-header">
-    <a href="/">
-      © Selected <span class="hidden md:inline">Works </span>by Jin <span class="hidden md:inline">Su Park</span>
+    <a href="/" class="flex items-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-4 h-4 mr-1" viewBox="0 0 512 512"><title>Arrow Back</title><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M244 400L100 256l144-144M120 256h292"/></svg>
+
+      Back to projects
     </a>
   </h1>
 
@@ -64,7 +66,7 @@ layout: layouts/base.njk
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
-          <h1 class="text-2xl sm:text-5xl 2xl:text-5xl font-regular text-neutral-300 dark:text-neutral-700 mb-14">
+          <h1 class="text-2xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-200 dark:text-neutral-800 tracking-tight mb-14">
             Through All Seasons 
             {# <br>
             <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
