--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -66,7 +66,7 @@ layout: layouts/base.njk
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
-          <h1 class="text-2xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-200 dark:text-neutral-800 tracking-tight mb-14">
+          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6">
             Through All Seasons 
             {# <br>
             <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
