--- a/index.njk
+++ b/index.njk
@@ -118,7 +118,7 @@ layout: layouts/base.njk
       </div> #}
 
       <div class="grid grid-cols-1 md:grid-cols-2 px-5 md:px-8 py-8">
-        <h3 class="mb-8 md:mb-0 w-full max-w-[540px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+        <h3 class="mb-8 md:mb-0 w-full max-w-[540px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-sm sm:text-base 2xl:text-lg leading-snug font-medium">
           Jin Su Park is multi-disciplinary Product Designer and Developer, currently living in New York. His work elevates brand clarity and product potential through thoughtful dialogue, and incredible attention to detail.
         </h3>
         {# <h3 class="mb-8 md:mb-0 w-full max-w-[512px] text-black/50 dark:text-white/50 text-base font-regular leading-snug">
