--- a/about.njk
+++ b/about.njk
@@ -64,7 +64,7 @@ layout: layouts/base.njk
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
           <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6">
-            Let Curiosity Play
+            Curiosity
             {# <br>
             <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
           </h1>
@@ -96,7 +96,38 @@ layout: layouts/base.njk
           </div>
           
 
-          <table class="w-full mt-[96px] dark:text-neutral-400 text-xs xl:text-sm">
+
+          <div class="flex items-center gap-8 mt-[96px] max-w-[500px]">
+            <div>
+              <div class="text-4xl font-medium text-black/80 dark:text-white/80">
+                42
+              </div>
+              <div class="mt-1 text-sm leading-tight font-medium text-black/50 dark:text-white/50">
+                Projects <br class="inline sm:hidden">Published
+              </div>
+            </div>
+            <div class="w-px h-[70px] bg-neutral-400 dark:bg-neutral-700"></div>
+            <div>
+              <div class="text-4xl font-medium text-black/80 dark:text-white/80">
+                15+
+              </div>
+              <div class="mt-1 text-sm leading-tight font-medium text-black/50 dark:text-white/50">
+                Projects <br class="inline sm:hidden">Published
+              </div>
+            </div>
+            <div class="w-px h-[70px] bg-neutral-400 dark:bg-neutral-700"></div>
+            <div>
+              <div class="text-4xl font-medium text-black/80 dark:text-white/80">
+                510
+              </div>
+              <div class="mt-1 text-sm leading-tight font-medium text-black/50 dark:text-white/50">
+                Projects <br class="inline sm:hidden">Published
+              </div>
+            </div>
+
+          </div>
+
+          {# <table class="w-full mt-[96px] dark:text-neutral-400 text-xs xl:text-sm">
             <tr>
               <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Awards</td>
               <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">
@@ -117,26 +148,19 @@ layout: layouts/base.njk
             </tr>
 
             
-          </table>
+          </table> #}
         </div>
       </div>
 
-
- 
-    </div>
-
-    <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="px-5 md:px-8 pt-[96px]">
-        <div class="h-1 bg-white/[.2]">
+        <div class="h-2 bg-neutral-200/40 dark:bg-neutral-800/40">
         </div>
       </div>
-    </div>
 
-    <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
           <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6">
-            The Magical Process
+            Capability
             {# <br>
             <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
           </h1>
@@ -183,22 +207,17 @@ layout: layouts/base.njk
         </div>
       </div>
 
-
- 
-    </div>
-
-    <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="px-5 md:px-8 pt-[96px]">
-        <div class="h-1 bg-white/[.2]">
+        <div class="h-2 bg-neutral-200/40 dark:bg-neutral-800/40">
         </div>
       </div>
-    </div>
 
-    <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
+
+
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
           <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6">
-            Design Roots
+            Methodology
             {# <br>
             <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
           </h1>
@@ -230,24 +249,99 @@ layout: layouts/base.njk
           </div>
           
 
-          <table class="w-full mt-[96px] dark:text-neutral-400 text-xs xl:text-sm">
-            <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Discipline</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">Digital Strategy <br>Digital Design, <br>Web design</td>
-            </tr>
-            <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Technology</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">HTML, <br>CSS, <br>Figma, <br>Eleventy, <br>Tailwind, <br>AlpineJS</td>
-            </tr>
-
+          <ul class="w-full mt-[96px] dark:text-neutral-400 text-xs xl:text-sm space-y-8" x-data="{tab: 0}">
+            <li class="flex items-start pt-6 border-t last:border-b-0 border-neutral-400 dark:border-neutral-700 cursor-pointer" @click="tab = 0">
+              <div class="pr-5">
+                <div class="flex items-center justify-center flex-none w-6 h-6 text-sm font-medium bg-neutral-300 text-neutral-700 rounded-full">
+                  1
+                </div>
+              </div>
+              <div class="pt-0.5">
+                <div>
+                  <h3 class="text-sm text-neutral-800 dark:text-neutral-300 font-medium">Insights & Creative Approach</h3>
+                  <p class="text-sm text-netural-600 dark:text-neutral-500 mt-4 max-w-[512px]" x-show="tab == 0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at ligula pharetra, viverra nisi eget, venenatis metus. Curabitur ante odio, pellentesque posuere ipsum volutpat, consectetur dignissim lacus. Vestibulum ut faucibus risus.</p>
+                </div>
+              </div>
+            </li>
             
-          </table>
+            <li class="flex items-start pt-6 border-t last:border-b-0 border-neutral-400 dark:border-neutral-700 cursor-pointer" @click="tab = 1">
+              <div class="pr-5">
+                <div class="flex items-center justify-center flex-none w-6 h-6 text-sm font-medium bg-neutral-300 text-neutral-700 rounded-full">
+                  2
+                </div>
+              </div>
+              <div class="pt-0.5">
+                <div>
+                  <h3 class="text-sm text-neutral-800 dark:text-neutral-300 font-medium">Concept & Design Strategy</h3>
+                  <p class="text-sm text-netural-600 dark:text-neutral-500 mt-4 max-w-[512px]" x-show="tab == 1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at ligula pharetra, viverra nisi eget, venenatis metus. Curabitur ante odio, pellentesque posuere ipsum volutpat, consectetur dignissim lacus. Vestibulum ut faucibus risus.</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="flex items-start pt-6 border-t last:border-b-0 border-neutral-400 dark:border-neutral-700 cursor-pointer" @click="tab = 2">
+              <div class="pr-5">
+                <div class="flex items-center justify-center flex-none w-6 h-6 text-sm font-medium bg-neutral-300 text-neutral-700 rounded-full">
+                  3
+                </div>
+              </div>
+              <div class="pt-0.5">
+                <div>
+                  <h3 class="text-sm text-neutral-800 dark:text-neutral-300 font-medium">Production & Implementation</h3>
+                  <p class="text-sm text-netural-600 dark:text-neutral-500 mt-4 max-w-[512px]" x-show="tab == 2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at ligula pharetra, viverra nisi eget, venenatis metus. Curabitur ante odio, pellentesque posuere ipsum volutpat, consectetur dignissim lacus. Vestibulum ut faucibus risus.</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+
         </div>
       </div>
 
+      <div class="px-5 md:px-8 pt-[96px]">
+        <div class="h-2 bg-neutral-200/40 dark:bg-neutral-800/40">
+        </div>
+      </div>
 
+      <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
+        <div>
+          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6">
+            Work Together
+            {# <br>
+            <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
+          </h1>
+          {# <div class="w-9 h-[2px] mb-12 bg-neutral-700 dark:bg-neutral-200"></div> #}
+          
+        </div>
+
+        <div class="pb-[160px]">
+          <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at ligula pharetra, viverra nisi eget, venenatis metus. Curabitur ante odio, pellentesque posuere ipsum volutpat, consectetur dignissim lacus. Vestibulum.
+          </p>
+
+          <ul class="grid grid-cols-2 mt-[96px]">
+            <li>
+              <a class="text-sm text-neutral-800 dark:text-neutral-300 font-medium">Email →</a>
+            </li>
+            <li>
+              <a class="text-sm text-neutral-800 dark:text-neutral-300 font-medium">LinkedIn →</a>
+            </li>
+            <li>
+              <a class="text-sm text-neutral-800 dark:text-neutral-300 font-medium">Dribbble →</a>
+            </li>
+            <li>
+              <a class="text-sm text-neutral-800 dark:text-neutral-300 font-medium">Behance →</a>
+            </li>
+            <li>
+              <a class="text-sm text-neutral-800 dark:text-neutral-300 font-medium">Twitter →</a>
+            </li>
+          </ul>
+
+        </div>
+      </div>
  
     </div>
+
+
+
   </section>
 
 
