--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -4,15 +4,15 @@ layout: layouts/base.njk
 ---
 
 <main data-barba="container" data-barba-namespace="work" class="gsap-container xh-screen xoverflow-hidden">
-  <h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-base leading-none text-black dark:text-white gsap-header">
+  <h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-sm leading-none text-black dark:text-white gsap-header" style="transform: translateY(-100px); opacity: 0;">
     <a href="/" class="flex items-center">
       <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-4 h-4 mr-1" viewBox="0 0 512 512"><title>Arrow Back</title><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M244 400L100 256l144-144M120 256h292"/></svg>
 
-      Back to projects
+      Go back
     </a>
   </h1>
 
-  <div class="fixed top-0 right-0 mt-5 mr-5 sm:mt-8 sm:mr-8 z-50 gsap-header">
+  <div class="fixed top-0 right-0 mt-5 mr-5 sm:mt-8 sm:mr-8 z-50 gsap-header" style="transform: translateY(-100px); opacity: 0;">
     <ul class="flex items-center gap-5">
       <li class="flex items-center">
         <a href="/about" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">About</a>
@@ -41,8 +41,8 @@ layout: layouts/base.njk
     </ul>
   </div>
 
-  <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 w-full md:w-auto flex items-center justify-center gsap-footer">
-    <a href="/" class="relative flex items-center justify-center flex-none w-14 h-14 text-white">
+  <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 w-full md:w-auto flex items-center justify-center">
+    <a href="/" class="relative flex items-center justify-center flex-none w-14 h-14 text-white gsap-footer" style="transform: translateY(100px); opacity: 0;">
       <div class="absolute top-0 left-0 flex-none w-14 h-14 rounded-full bg-neutral-800 dark:bg-neutral-700 duration-200 hover:scale-110">
 
       </div>
@@ -66,7 +66,7 @@ layout: layouts/base.njk
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
-          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6">
+          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6 tracking-tight">
             Through All Seasons 
             {# <br>
             <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
