--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -4,7 +4,7 @@ layout: layouts/base.njk
 ---
 
 <main data-barba="container" data-barba-namespace="work" class="gsap-container xh-screen xoverflow-hidden">
-  <h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-sm leading-none text-black dark:text-white gsap-header" style="transform: translateY(-100px); opacity: 0;">
+  <h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-50 font-medium text-base leading-none text-black dark:text-white gsap-header" style="transform: translateY(-100px); opacity: 0;">
     <a href="/" class="flex items-center">
       <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-4 h-4 mr-1" viewBox="0 0 512 512"><title>Arrow Back</title><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M244 400L100 256l144-144M120 256h292"/></svg>
 
