--- a/index.njk
+++ b/index.njk
@@ -8,11 +8,9 @@ layout: layouts/base.njk
 <main data-barba="container" data-barba-namespace="home" class="gsap-container xh-screen xoverflow-hidden">
   <header class="fixed top-0 w-full px-8 py-6 flex items-center justify-between z-50 gsap-header " style="transform: translateY(-100px); opacity: 0;">
     <h1 class="font-medium text-base leading-none text-black dark:text-white">
-      <a href="/" class="flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-4 h-4 mr-1" viewBox="0 0 512 512"><title>Arrow Back</title><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M244 400L100 256l144-144M120 256h292"/></svg>
-
-        Go back
-      </a>
+      <span class="flex items-center">
+        © Selected Works 08 &#8212; 23
+      </span>
     </h1>
 
     <div>
