--- a/index.njk
+++ b/index.njk
@@ -66,7 +66,7 @@ layout: layouts/base.njk
           <a class="h-[48px] md:h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200 cursor-pointer" @click="filterID = 'art-direction'">Art Direction</a>
         </li>
       </ul>
-      <div class="flex-none w-px h-6 bg-white/40 dark:bg-black/20">
+      <div class="flex-none w-px h-6  bg-neutral-600 dark:bg-neutral-500">
 
       </div>
       <ul class="flex flex-none sm:hidden items-center px-2">
