--- a/index.njk
+++ b/index.njk
@@ -6,7 +6,7 @@ layout: layouts/base.njk
 
 
 <main data-barba="container" data-barba-namespace="home" class="gsap-container xh-screen xoverflow-hidden">
-  <header class="fixed top-0 w-full px-8 py-6 flex items-center justify-between z-50 gsap-header " style="transform: translateY(-100px); opacity: 0;">
+  <header class="fixed top-0 w-full px-5 md:px-8 py-6 flex items-center justify-between z-50 gsap-header " style="transform: translateY(-100px); opacity: 0;">
     <h1 class="font-medium text-base leading-none text-black dark:text-white">
       <span class="flex items-center">
         © Selected Works 08 &#8212; 23
