--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -1,38 +1,38 @@
-<header class="fixed top-0 w-full px-8 py-6 flex items-center justify-between z-50 gsap-header " style="transform: translateY(-100px); opacity: 0;">
-    <h1 class="font-medium text-base leading-none text-black dark:text-white">
-      <a href="/" class="flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-4 h-4 mr-1" viewBox="0 0 512 512"><title>Arrow Back</title><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M244 400L100 256l144-144M120 256h292"/></svg>
+<header class="fixed top-0 w-full px-5 md:px-8 py-6 flex items-center justify-between z-50 gsap-header " style="transform: translateY(-100px); opacity: 0;">
+  <h1 class="font-medium text-base leading-none text-black dark:text-white">
+    <a href="/" class="flex items-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-4 h-4 mr-1" viewBox="0 0 512 512"><title>Arrow Back</title><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M244 400L100 256l144-144M120 256h292"/></svg>
 
-        Back to projects
-      </a>
-    </h1>
+      Back to projects
+    </a>
+  </h1>
 
-    <div>
-      <ul class="flex items-center gap-5">
-        <li class="flex items-center">
-          <a href="/about" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">About</a>
-        </li>
-        <li class="hidden lg:flex items-center">
-          <a href="/" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Works</a>
-        </li>
-        <li class="hidden lg:flex items-center">
-          <a href="https://github.com/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Github</a>
-        </li>
-        <li class="hidden lg:flex items-center">
-          <a href="https://read.cv/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">CV</a>
-        </li>
-        
-        {# <li class="flex lg:hidden items-center">
-          <a href="#" class="flex items-center font-medium text-sm text-black/80 hover:text-black/80 duration-200">
-            Published
-            <svg class="fill-current w-3 h-3 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 240L160 384 0 240l0-48 320 0 0 48z"/></svg>
-          </a>
-        </li> #}
-        <li class="flex items-center lg:ml-1">
-          <button @click="toggleDarkMode()" class="w-4 h-4 rounded-full overflow-hidden border border-black dark:border-white">
-            <div class="w-[8px] h-4 bg-black dark:bg-white"></div>
-          </button>
-        </li>
-      </ul>
-    </div>
-  </header>
+  <div>
+    <ul class="flex items-center gap-5">
+      <li class="flex items-center">
+        <a href="/about" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">About</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="/" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Works</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="https://github.com/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Github</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="https://read.cv/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">CV</a>
+      </li>
+      
+      {# <li class="flex lg:hidden items-center">
+        <a href="#" class="flex items-center font-medium text-sm text-black/80 hover:text-black/80 duration-200">
+          Published
+          <svg class="fill-current w-3 h-3 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 240L160 384 0 240l0-48 320 0 0 48z"/></svg>
+        </a>
+      </li> #}
+      <li class="flex items-center lg:ml-1">
+        <button @click="toggleDarkMode()" class="w-4 h-4 rounded-full overflow-hidden border border-black dark:border-white">
+          <div class="w-[8px] h-4 bg-black dark:bg-white"></div>
+        </button>
+      </li>
+    </ul>
+  </div>
+</header>
