--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1769,6 +1769,11 @@ video {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+
+  .md\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
 }
 
 @media (min-width: 1024px) {
