--- a/about.njk
+++ b/about.njk
@@ -94,16 +94,16 @@ layout: layouts/base.njk
 
           {# <table class="w-full mt-[96px] dark:text-neutral-400 text-xs xl:text-sm">
             <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Awards</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">
+              <td class="align-top py-3 pr-8 border-t border-neutral-300 dark:border-neutral-700">Awards</td>
+              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">
                 Design Museum - Designs of the Year<br>
                 D&AD Wood Pencil<br>
                 D&AD New Blood Yellow Pencil
               </td>
             </tr>
             <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Notable Clients</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">
+              <td class="align-top py-3 pr-8 border-t border-neutral-300 dark:border-neutral-700">Notable Clients</td>
+              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">
                 Medallia<br>
                 Fergus<br>
                 Hopmedic<br>
@@ -157,17 +157,23 @@ layout: layouts/base.njk
           </div>
           
 
-          <table class="w-full mt-[96px] dark:text-neutral-400 text-xs xl:text-sm">
+          <table class="w-full mt-[160px] dark:text-neutral-400 text-xs xl:text-sm">
             <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Discipline</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">Digital Strategy <br>Digital Design, <br>Web design</td>
+              <td class="align-top py-3 pr-8 text-neutral-900 dark:text-neutral-400 border-t border-neutral-300 dark:border-neutral-700">Client</td>
+              <td class="align-top py-3 text-neutral-500 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">Fergus</td>
             </tr>
             <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Technology</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">HTML, <br>CSS, <br>Figma, <br>Eleventy, <br>Tailwind, <br>AlpineJS</td>
+              <td class="align-top py-3 pr-8 text-neutral-900 dark:text-neutral-400 border-t border-neutral-300 dark:border-neutral-700">Year</td>
+              <td class="align-top py-3 text-neutral-500 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">2022</td>
             </tr>
-
-            
+            <tr>
+              <td class="align-top py-3 pr-8 text-neutral-900 dark:text-neutral-400 border-t border-neutral-300 dark:border-neutral-700">Discipline</td>
+              <td class="align-top py-3 text-neutral-500 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">Digital Strategy, Digital Design, Web design</td>
+            </tr>
+            <tr>
+              <td class="align-top py-3 pr-8 text-neutral-900 dark:text-neutral-400 border-t border-neutral-300 dark:border-neutral-700">Technology</td>
+              <td class="align-top py-3 text-neutral-500 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">HTML, CSS, Figma, Eleventy, Tailwind, AlpineJS</td>
+            </tr>
           </table>
         </div>
       </div>
@@ -215,7 +221,7 @@ layout: layouts/base.njk
           
 
           <ul class="w-full mt-[96px] dark:text-neutral-400 text-xs xl:text-sm space-y-6" x-data="{tab: 0}">
-            <li class="flex items-start pt-6 border-t last:border-b-0 border-neutral-400 dark:border-neutral-700 cursor-pointer" @click="tab = 0">
+            <li class="flex items-start pt-6 border-t last:border-b-0 border-neutral-300 dark:border-neutral-700 cursor-pointer" @click="tab = 0">
               <div class="pr-5">
                 <div class="flex items-center justify-center flex-none w-6 h-6 text-sm font-medium bg-neutral-300 text-neutral-700 rounded-full">
                   1
@@ -229,7 +235,7 @@ layout: layouts/base.njk
               </div>
             </li>
             
-            <li class="flex items-start pt-6 border-t last:border-b-0 border-neutral-400 dark:border-neutral-700 cursor-pointer" @click="tab = 1">
+            <li class="flex items-start pt-6 border-t last:border-b-0 border-neutral-300 dark:border-neutral-700 cursor-pointer" @click="tab = 1">
               <div class="pr-5">
                 <div class="flex items-center justify-center flex-none w-6 h-6 text-sm font-medium bg-neutral-300 text-neutral-700 rounded-full">
                   2
@@ -243,7 +249,7 @@ layout: layouts/base.njk
               </div>
             </li>
 
-            <li class="flex items-start pt-6 border-t last:border-b-0 border-neutral-400 dark:border-neutral-700 cursor-pointer" @click="tab = 2">
+            <li class="flex items-start pt-6 border-t last:border-b-0 border-neutral-300 dark:border-neutral-700 cursor-pointer" @click="tab = 2">
               <div class="pr-5">
                 <div class="flex items-center justify-center flex-none w-6 h-6 text-sm font-medium bg-neutral-300 text-neutral-700 rounded-full">
                   3
