--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Sample
+title: Sample Work
 layout: layouts/base.njk
 ---
 
@@ -61,20 +61,20 @@ layout: layouts/base.njk
 
           <table class="w-full mt-[160px] dark:text-neutral-400 text-xs xl:text-sm">
             <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Client</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">Fergus</td>
+              <td class="align-top py-3 pr-8 text-neutral-900 dark:text-neutral-400 border-t border-neutral-300 dark:border-neutral-700">Client</td>
+              <td class="align-top py-3 text-neutral-500 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">Fergus</td>
             </tr>
             <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Year</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">2022</td>
+              <td class="align-top py-3 pr-8 text-neutral-900 dark:text-neutral-400 border-t border-neutral-300 dark:border-neutral-700">Year</td>
+              <td class="align-top py-3 text-neutral-500 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">2022</td>
             </tr>
             <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Discipline</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">Digital Strategy, Digital Design, Web design</td>
+              <td class="align-top py-3 pr-8 text-neutral-900 dark:text-neutral-400 border-t border-neutral-300 dark:border-neutral-700">Discipline</td>
+              <td class="align-top py-3 text-neutral-500 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">Digital Strategy, Digital Design, Web design</td>
             </tr>
             <tr>
-              <td class="align-top py-3 pr-8 border-t border-neutral-400 dark:border-neutral-700">Technology</td>
-              <td class="align-top py-3 dark:text-neutral-500 border-t border-neutral-400 dark:border-neutral-700">HTML, CSS, Figma, Eleventy, Tailwind, AlpineJS</td>
+              <td class="align-top py-3 pr-8 text-neutral-900 dark:text-neutral-400 border-t border-neutral-300 dark:border-neutral-700">Technology</td>
+              <td class="align-top py-3 text-neutral-500 dark:text-neutral-500 border-t border-neutral-300 dark:border-neutral-700">HTML, CSS, Figma, Eleventy, Tailwind, AlpineJS</td>
             </tr>
           </table>
         </div>
