--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -24,7 +24,7 @@ layout: layouts/base.njk
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden gsap-circle">
         <div class="bg-red-800 w-[100%] h-[100%] rounded-full"></div>
         <div class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] gsap-circle-card">
-          <img src="/assets/img/works/sample/sample-thumb.png" class="w-[100%] h-[100%] translate-x-[8%] translate-y-[5%] duration-200">
+          <img src="/assets/img/works/sample/sample-thumb.png" class="w-[100%] h-[100%] ml-[8%] mt-[5%] duration-200">
         </div>
       </div>
 
